# valorantlog

./: LICENSE  NOTICE  README.md  pyproject.toml
benchmarks/: frame_loading.py
src/: detector.py  inference.py  ocr.py  rfdetr.py  state.py
src/valorantlog/: cli.py  detector.py  inference.py  loader.py  log.py  ocr.py  rfdetr.py  state.py
tests/: conftest.py  test_cli.py  test_detector.py  test_ocr.py  test_state.py
