[project]
name = "valorantlog"
version = "0.1.0"
description = "Create an action log based on Valorant Esports VODs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "onnxruntime-gpu>=1.23.2",
    "opencv-python-headless>=4.11.0.86",
    "tesserocr>=2.9.2",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.9.1",
    "torchcodec>=0.9.1",
    "torchvision>=0.24.1",
]
cu128 = [
    "torch>=2.9.1",
    "torchcodec>=0.9.1",
    "torchvision>=0.24.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchcodec = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
valorantlog = "valorantlog.cli:main"
